@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.995-4
-Date: 2006-01-26
+Version: 0.995-5
+Date: 2006-02-07
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
